--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
 
       <ul class="nav nav-pills">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/home.html">Home</a>
+          <a class="nav-link" aria-current="page" href="/home.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="achievements.html">Achievements</a>
@@ -30,7 +30,7 @@
           <a class="nav-link" href="about.html">About</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="login.html">Login/Sign-up</a>
+            <a class="nav-link active" href="login.html">Login/Sign-up</a>
         </li>
       </ul>
 
