--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     
-    <title>Home|Perfect Portrait</title>
+    <title>About|Perfect Portrait</title>
 </head>
 <body>
     <!-- Image and text -->
@@ -21,13 +21,13 @@
 
       <ul class="nav nav-pills">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/home.html">Home</a>
+          <a class="nav-link" aria-current="page" href="/home.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="achievements.html">Achievements</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="about.html">About</a>
+          <a class="nav-link active" href="about.html">About</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="login.html">Login/Sign-up</a>
