--- a/achievements.html
+++ b/achievements.html
@@ -21,10 +21,10 @@
 
       <ul class="nav nav-pills">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/home.html">Home</a>
+          <a class="nav-link " aria-current="page" href="home.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="achievements.html">Achievements</a>
+          <a class="nav-link active" href="achievements.html">Achievements</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="about.html">About</a>
