--- a/about.html
+++ b/about.html
@@ -36,6 +36,19 @@
 
     </div>
   </nav>
+  <div class="container">
+    <h1> Shreyash Warang</h1>
+    <h2> Digital Painting Artist</h2>
+    <div class="imge">
+        <img src="https://raw.githubusercontent.com/Amandubey12/Navbs/main/WhatsApp%20Image%202021-02-13%20at%2022.26.26.jpeg" class="img-fluid" alt="...">
+        </div>
+
+        
+        <nav class="navbar navbar-light bg-light">
+            <div class="container-fluid">
+              <span class="navbar-brand mb-0 h1">&copy; 2021 Perfect Portrait | All Rights Are Reserved</span>
+            </div>
+          </nav>
     
 </body>
 </html>
