--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
     <!-- Image and text -->
 <nav class="navbar navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="file:///F:/Perfect%20Portrait%20(1).svg">
         <img src="images/Perfect Portrait (1).svg" alt="" width="30" height="24" class="d-inline-block align-top">
         Perfect Portrait
       </a>
@@ -33,9 +33,75 @@
             <a class="nav-link" href="login.html">Login/Sign-up</a>
         </li>
       </ul>
-
     </div>
   </nav>
-    
+
+
+<div class="card text-center">
+  <div class="card-header">
+    Some photos
+  </div>
+ 
+<div class="row row-cols-1 row-cols-md-2 g-4">
+  <div class="col">
+    <div class="card">
+      <img src="images/msd.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">MAHENDRA SINGH DHONI </h5>
+        <p class="card-text">He is former indain international cricketer who captained the indain national team in limited over formats from 2007 to 2017</p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="images/Little_krishna.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">LITTLE KRISHNA</h5>
+        <p class="card-text">A mischievous child, lives in the village of Vrindavan. He decides to save the villagers from an evil king, Kamsa, who sends ferocious demons upon them</p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="images/Thackeray.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">RAJ THACKERAY</h5>
+        <p class="card-text">Raj Shrikant Thackeray is an Indian politician and chairperson of the Maharashtra Navnirman Sena (MNS), a regional political party. He is the nephew of Bal Thackeray</p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="images/Kajal_aggarwal.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">KAJAL AGARAWAL</h5>
+        <p class="card-text">Kajal Aggarwal is an Indian film actress and model. She has established a career in the Telugu, Tamil, and Hindi films and has been nominated for four Filmfare Awards South</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="card text-center">
+  <div class="card-header">
+    Contact Form
+  </div>
+<form action="https://formsubmit.co/dubeyaman667@gmail.com" method="POST">
+  <label for="fname">EMAIL:</label><br>
+  <input type="email" name="email" placeholder="Email Address" required>
+ <br><input type="hidden" name="_next" value="https://yourdomain.co/thanks.html"></br>
+ <label for="fname">NAME:</label><br>
+  <input type="name " name="name" placeholder="name" required></br>
+  <label for="fname">MESSAGE:</label><br>
+  <input type="text " name="message" placeholder="Drop us a message" required>
+  <br><button type="button" class="btn btn-lg btn-danger" data-bs-toggle="popover" title="Are you sure?" data-bs-content="This will send an email.">
+      Submit</button>
+</form>
+
+<nav class="navbar navbar-light bg-light">
+    <div class="container-fluid">
+      <span class="navbar-brand mb-0 h1">&copy; 2021 Perfect Portrait | All Rights Are Reserved</span>
+    </div>
+  </nav>
+
 </body>
 </html>
