--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     
-    <title>Home|Perfect Portrait</title>
+    <title>Login|Perfect Portrait</title>
 </head>
 <body>
     <!-- Image and text -->
@@ -33,9 +33,14 @@
             <a class="nav-link active" href="login.html">Login/Sign-up</a>
         </li>
       </ul>
-
     </div>
   </nav>
-    
+   
+  <nav class="navbar navbar-light bg-light">
+    <div class="container-fluid">
+      <span class="navbar-brand mb-0 h1">&copy; 2021 Perfect Portrait | All Rights Are Reserved</span>
+    </div>
+  </nav> 
+
 </body>
 </html>
